GEODE-1143: Adding GC JVM setting in gradle